<resources>
    <string name="app_name">KantinKom</string>
    <string name="logo">logo</string>
    <string name="back">back</string>
    <string name="menu">Silahkan pilih menu yang tersedia</string>
    <string name="choose_drink">Pilih Minuman</string>
    <string name="one_drink">one_drink</string>
    <string name="lemon">lemon</string>
    <string name="es_lemon">ES LEMON</string>
    <string name="nikmati_kesegeran_dan_n_kecutnya_lemon_khas">Nikmati kesegeran dan\n kecutnya lemon khas.</string>
    <string name="ini_minuman">iniminuman</string>
    <string name="ini_stroberi">ini_stroberi</string>
    <string name="jus_stroberi">JUS STROBERI</string>
    <string name="stroberi_des">Dengan stroberi segar pil-\n ihan terbaik dari gunung.</string>
    <string name="ini_kopi">ini Kopi</string>
    <string name="kopi_ireng">KOPI IRENG</string>
    <string name="kopi_des">Numerouno kopi khas den-\n gan citarasa Indonesiano.</string>
    <string name="sirup_marjan">SIRUP MARJAN</string>
    <string name="sirup_des">Sirup ciptaan bulan puasa,\n yang iklannya menggoda.</string>
    <string name="ini_jeruk">ini Jeruk</string>
    <string name="es_jeruk">ES JERUK</string>
    <string name="jeruk_des">Es jeruk 500an ga pake ke-\n ntang, segerrr ra karuan.</string>
    <string name="image_cart">image_cart</string>
    <string name="_1">1</string>
    <string name="ic_back">ic_back</string>
    <string name="ic_notif">ic_notif</string>
    <string name="ic_logo">ic_logo</string>
    <string name="detail_pesanan">DETAIL PESANAN</string>
    <string name="pesan_desc">Pesanan anda, silahkan lanjut pembayaran</string>
    <string name="ic_dompet">ic_dompet</string>
    <string name="_1">1</string>
    <string name="pembayaran">PEMBAYARAN</string>
    <string name="bayar_desc">Silahkan masukan jumlah pesanan</string>
    <string name="saldo_anda">Saldo Anda</string>
    <string name="ic_image">ic_image</string>
    <string name="checkout">CHECKOUT</string>
    <string name="ic_important">ic_important</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="ic_shop">ic_shop</string>
    <string name="ic_info">ic_info</string>
    <string name="ic_menu">ic_menu</string>
    <string name="harga">HARGA</string>
    <string name="penjual">PENJUAL</string>
    <string name="rating">RATING</string>
    <string name="ic_rating">ic_rating</string>
    <string name="checkout">CHECKOUT</string>
    <string name="harga">HARGA</string>
    <string name="penjual">PENJUAL</string>
    <string name="pilih_paket_hemat">Pilih Paket Hemat</string>
    <string name="silahkan_pilih_menu_yang_tersedia">Silahkan pilih menu yang tersedia</string>
    <string name="ic_next">ic_next</string>
    <string name="telor_kopi">TELOR + KOPI</string>
    <string name="kenyang">Abis kenyang terus lanjut\n ngopi, wualah nikmat.</string>
    <string name="roti_kopi">ROTI + KOPI</string>
    <string name="kopi">Del lezato kopi plus rotio.\n Dengan sedikit pahit.</string>
    <string name="kolak">kolak</string>
    <string name="kolak_bule">KOLAK BULE</string>
    <string name="kolak_bule_desc">Karena kids zaman now bu-\n tuh makan yang westernan.</string>
    <string name="roti_telur">roti_telur</string>
    <string name="menu_roti_telur">ROTI + TELUR</string>
    <string name="desc_roti_telur">Roti panggang dipadu den-\n ngan telur pilihan.</string>
    <string name="sate">sate</string>
    <string name="sate_madura">SATE MADURA</string>
    <string name="sate_desc">Te sate sate taye, yuk nikm-\n ati sate terbaik dari Madura.</string>
    <string name="pesanan_n_sukses">PESANAN\n SUKSES</string>
    <string name="bait1">Silahkan menuju ke pelukan mantan,\njika memang itu yang kau inginkan.</string>
    <string name="bait2">Namun jika setelah kau berjalan wa-\n jahku masih kau temukan.\n Kemarilah kan kudekap senyummu\n yang telah luput dari ratapku.</string>
    <string name="bait3">Andaikan pelikmu masih saja meng-\n hantu, kan kudekap engkau dengan\n sepenuh pelukku, meski ragu masih\n menderu. Tak apa, asal pilumu telah\n tersapu, kekasih.</string>
    <string name="bait4">-- Heuheuheuhu --</string>
    <string name="txt_btn">Kembali ke Mantan</string>
    <string name="eh_pesanan">* Eh Pesanan</string>
    <string name="nameApp">KantinKOM</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="ic_upload">ic_upload</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="bio_status">Bio / Status</string>
    <string name="daftar">Daftar</string>
    <string name="plus">+</string>
    <string name="mhs">Mahasiswa</string>
    <string name="name">Sidik Ristiawan Yusuf</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
