<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HematAct">

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.48"
        android:background="@drawable/bg_overlay_ill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_keyboard_backspace_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ic_back" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_notifications_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ic_notif" />

    <ImageView
        android:id="@+id/logo_amikom"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_amikom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ic_logo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserratmedium"
        android:gravity="center"
        android:text="@string/pilih_paket_hemat"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/sourcesansproregular"
        android:gravity="center"
        android:text="@string/silahkan_pilih_menu_yang_tersedia"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.48"
        android:background="@drawable/bg_overlay_orange"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/hemat_satu"
            android:contentDescription="@string/ic_image" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/textView11">

        <ImageView
            android:id="@+id/btn_telur"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_keyboard_arrow_right_24px"
            android:contentDescription="@string/ic_next" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/telor_kopi"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/sourcesansproregular"
        android:text="@string/kenyang"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />


    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.48"
        android:background="@drawable/bg_overlay_orange"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <ImageView
            android:id="@+id/minuman"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/hemat_dua"
            android:contentDescription="@string/ic_image" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout7"
        app:layout_constraintTop_toTopOf="@+id/textView14">

        <ImageView
            android:id="@+id/btn_roti"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_keyboard_arrow_right_24px"
            android:contentDescription="@string/ic_next" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/roti_kopi"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout7"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/sourcesansproregular"
        android:text="@string/kopi"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.48"
        android:background="@drawable/bg_overlay_orange"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/hemat_tiga"
            android:contentDescription="@string/kolak" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout9"
        app:layout_constraintTop_toTopOf="@+id/textView13">

        <ImageView
            android:id="@+id/btn_kolak"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_keyboard_arrow_right_24px"
            android:contentDescription="@string/ic_next" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/kolak_bule"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout9"
        app:layout_constraintStart_toEndOf="@+id/frameLayout3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/sourcesansproregular"
        android:text="@string/kolak_bule_desc"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/frameLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.48"
        android:background="@drawable/bg_overlay_orange"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/hemat_empat"
            android:contentDescription="@string/roti_telur" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="@+id/textView12">

        <ImageView
            android:id="@+id/btn_rolur"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_keyboard_arrow_right_24px"
            android:contentDescription="@string/ic_next" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/menu_roti_telur"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
        app:layout_constraintStart_toEndOf="@+id/frameLayout4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/sourcesansproregular"
        android:text="@string/desc_roti_telur"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/frameLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.48"
        android:background="@drawable/bg_overlay_orange"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout5"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/hemat_lima"
            android:contentDescription="@string/sate" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout10"
        app:layout_constraintTop_toTopOf="@+id/textView17">

        <ImageView
            android:id="@+id/btn_sate"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_keyboard_arrow_right_24px"
            android:contentDescription="@string/ic_next" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/sate_madura"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
        app:layout_constraintStart_toEndOf="@+id/frameLayout5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/sourcesansproregular"
        android:text="@string/sate_desc"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/frameLayout5"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="360dp"
        android:layout_height="297dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.2"
        android:src="@drawable/ic_hot_beverage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/ic_image" />


</androidx.constraintlayout.widget.ConstraintLayout>